--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
       </section>
       <section id="welcome-section">
-        <h1 id="about">Hey I am Meruem</h1>
+        <h1 id="about">Hey, I am Meruem!</h1>
         <h2>a web developer</h2>   
       </section>
       <section id="projects">
