--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <main>
       <section>
-        <header>
+        <header class="head">
           <nav id="navbar">
             <ul>
           <li><a href="#about">About</a></li>
@@ -27,7 +27,7 @@
           </nav>
         </header>
       </section>
-      <section id="welcome-section">
+      <section id="welcome-section" class="Welcome">
         <h1 id="about">Hey, I am Meruem!</h1>
         <h2>a web developer</h2>   
       </section>
