--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </section>
       <section id="welcome-section" class="Welcome">
         <h1 id="about">Hey, I am Meruem!</h1>
-        <h2>a web developer</h2>   
+        <h2 id="about">a web developer</h2>   
       </section>
       <section id="projects">
         <h2 class="project-tile">These are some of my projects</h2>
@@ -54,6 +54,12 @@ ADD PROJECTS<a></a>
           <a id="profile-link" href="https://www.youtube.com/freecodecamp">
             <i class="fab fa-youtube"></i>
           </a>
+        </div>
+      </section>
+      <section class="footer">
+        <div class="footdiv">
+            <h2>Meruem Moon</h2>
+            <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product</h3>
         </div>
       </section>
     </main>
