--- a/index.html
+++ b/index.html
@@ -28,8 +28,23 @@
         </header>
       </section>
       <section id="welcome-section" class="Welcome">
-        <h1 id="about">Hey, I am Meruem!</h1>
-        <h2 id="about">a web developer</h2>   
+        <h1 id="welc-about">Hey, I am Meruem!</h1>
+        <h2 id="welc-about">a web developer</h2>   
+      </section>
+      <section id="about-me" class="Welcome">
+        <h2 id="about1">ABOUT ME</h2> 
+        <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
+        <h2 id="about3">Here I am!</h2>
+        <h2 id="about4">I'm a Frontend Web Developer building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the Projects section.
+
+I also like sharing content related to the stuff that I have learned over the years in Web Development so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming
+
+I'm open to Job opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to contact me.</h2>   
+        <div class="contact-button"><a href="#contact">Contact</a></div>
+        <h2 id="about3">My skills</h2>
+        <div>
+            SKILLS HERE
+        </div>
       </section>
       <section id="projects">
         <h2 class="project-tile">These are some of my projects</h2>
