--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
       </section>
       <section id="welcome-section" class="Welcome">
-        <h1 id="welc-about">Hey, I am Meruem!</h1>
+        <h1 id="welc-about1">Hey, I am Meruem!</h1>
         <h2 id="welc-about">a web developer</h2>   
       </section>
       <section id="about-me" class="Welcome">
