--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to <strong>contact</strong> me.</h2>   
         <div class="contact-button"><a href="#contact">Contact</a></div>
         <h2 id="about3">My skills</h2>
-        <div>
-            SKILLS HERE
+        <divclass="skills">
+            
         </div>
       </section>
       <section id="projects">
