--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </nav>
         </header>
       </section>
-      <section id="welcome-section" class="Welcome">
+      <section id="welcome-section" class="Welcomes">
         <h1 id="welc-about1">Hey, I am Meruem!</h1>
         <h2 id="welc-about">a web developer</h2>   
       </section>
