--- a/index.html
+++ b/index.html
@@ -34,12 +34,29 @@
       <section id="about-me" class="Welcome">
         <h2 id="about1">ABOUT ME</h2> 
         <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
-        <h2 id="about3">Here I am!</h2>
-        <h2 id="about4">I'm a <strong>Frontend Web Developer</strong> building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
-        <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>Web Development</strong> so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming</h2>
-        <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to <strong>contact</strong> me.</h2>   
-        <div class="contact-button"><a href="#contact">Contact</a></div>
-        <h2 id="about3">My skills</h2>
+        <div>
+          <h2 id="about3">Here I am!</h2>
+          <h2 id="about4">I'm a <strong>Frontend Web Developer</strong> building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
+          <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>Web Development</strong> so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming</h2>
+          <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to <strong>contact</strong> me.</h2>   
+          <div class="contact-button"><a href="#contact">Contact</a></div>
+        </div>
+        <div>
+          <h2 id="about3">My skills</h2>
+          <div class="skills">
+            <div class="skills_skill">HTML</div>
+            <div class="skills_skill">CSS</div>
+            <div class="skills_skill">JavaScript</div>
+            <div class="skills_skill">React</div>
+            <div class="skills_skill">Python</div>
+            <div class="skills_skill">C#</div>
+            <div class="skills_skill">Github</div>
+            <div class="skills_skill">Responsive Design</div>
+            <div class="skills_skill">Terminal</div>
+            <div class="skills_skill">SQL Basics</div>
+
+          </div>
+        </div>
         <divclass="skills">
             
         </div>
