--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           </div>
           <div>
             <h2 id="about3">My skills</h2>
+            <div class="skills-container">
             <div class="skills">
               <div class="skills_skill">HTML</div>
               <div class="skills_skill">CSS</div>
@@ -55,6 +56,7 @@
               <div class="skills_skill">Responsive Design</div>
               <div class="skills_skill">Terminal</div>
               <div class="skills_skill">SQL Basics</div>
+            </div>
             </div>
           </div>
         </div>
