--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h2 id="about1">ABOUT ME</h2> 
         <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
         <div class="about-section">
-          <div>
+          <div class="abouts">
             <h2 id="about3">Here I am!</h2>
             <h2 id="about4">I'm a <strong>Frontend Web Developer</strong> building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
             <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>Web Development</strong> so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming</h2>
