--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
               <div class="skills_skill">Responsive Design</div>
               <div class="skills_skill">Terminal</div>
               <div class="skills_skill">SQL Basics</div>
+              <div class="skills_skill">Problem Solving</div>
+              <div class="skills_skill">Efficenicy</div>
+              <div class="skills_skill">Curiosity</div>
             </div>
             </div>
           </div>
