--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
       </section>
       <section id="welcome-section" class="Welcome">
-        <h1 id="welc-about1">Hey, I am Meruem!</h1>
+        <h1 id="welc-about1">Hey, I am Connor!</h1>
         <h2 id="welc-about">a web developer</h2>   
       </section>
       <section id="about-me" class="Welcome">
@@ -71,29 +71,33 @@ ADD PROJECTS<a></a>
       <section id="contact">
         <h1>Let's work together...</h1>
         <h3>How do you take your coffee?</h3>
-        <div class="social-icons">
-          <a id="profile-link" target="_blank" href="https://www.facebook.com/freecodecamp/">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a id="profile-link" href="https://twitter.com/freecodecamp/">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a id="profile-link" href="https://instagram.com/freecodecamp">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a id="profile-link" href="https://www.linkedin.com/school/free-code-camp/">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a id="profile-link" href="https://www.youtube.com/freecodecamp">
-            <i class="fab fa-youtube"></i>
-          </a>
-        </div>
       </section>
       <section class="footer">
-        <div class="footdiv">
-            <h2>Meruem Moon</h2>
-            <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product</h3>
+        <div class="above-bar-footer">
+          <div class="footdiv">
+              <h2>Connor Hill</h2>
+              <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product</h3>
+          </div>
+          <div class="social-icons">
+            <a id="profile-link" target="_blank" href="https://www.facebook.com/freecodecamp/">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a id="profile-link" href="https://twitter.com/freecodecamp/">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a id="profile-link" href="https://instagram.com/freecodecamp">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a id="profile-link" href="https://www.linkedin.com/school/free-code-camp/">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a id="profile-link" href="https://www.youtube.com/freecodecamp">
+              <i class="fab fa-youtube"></i>
+            </a>
+          </div>
         </div>
+        <div class="bar"></div>
+        <div class="copyright">© Copyright 2023. Made by Connor Hill</div>
       </section>
     </main>
   </body>
