--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <nav id="navbar">
             <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#work">Work</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
           </nav>
@@ -66,7 +66,7 @@
       </section>
       <section id="projects">
         <h2 class="project-tile">These are some of my projects</h2>
-ADD PROJECTS<a></a>
+        <p>ADD PROJECTS</p>
       </section>
       <section id="contact">
         <h1>Let's work together...</h1>
