--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
               <h2>Connor Hill</h2>
               <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product</h3>
           </div>
+          <h2 class="socials">Socials</h2>
           <div class="social-icons">
             <a id="profile-link" target="_blank" href="https://www.facebook.com/freecodecamp/">
               <i class="fab fa-facebook-f"></i>
