--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
         </div>
       </section>
       <section id="projects">
+        <h2 id="about1">PROJECTS</h2> 
         <h2 class="project-tile">These are some of my projects</h2>
         <p>ADD PROJECTS</p>
       </section>
       <section id="contact">
+        <h2 id="about1">CONTACT</h2> 
         <h1>Let's work together...</h1>
-        <h3>How do you take your coffee?</h3>
+        <h3>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</h3>
       </section>
       <section class="footer">
         <div class="above-bar-footer">
