--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1 id="welc-about1">Hey, I am Connor!</h1>
         <h2 id="welc-about">a web developer</h2>   
       </section>
-      <section id="about-me" class="Welcome">
+      <section id="about-me" class="About-mee">
         <h2 id="about1">ABOUT ME</h2> 
         <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
         <div class="about-section">
