--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h2 id="about4">I'm a <strong>Frontend Web Developer</strong> building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
             <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>Web Development</strong> so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming</h2>
             <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to <strong>contact</strong> me.</h2>   
-            <a class="contact-button" href="#contact">Contact</a>
+            <input class="contact-button" href="#contact" type="button" value="CONTACT" />
           </div>
           <div>
             <h2 id="about3">My skills</h2>
