--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section id="contact">
         <h2 id="about1">CONTACT</h2> 
         <h1>Let's work together...</h1>
-        <h3>Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</h3>
+        <h2 id="about2">Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</h2>
       </section>
       <section class="footer">
         <div class="above-bar-footer">
