--- a/index.html
+++ b/index.html
@@ -66,12 +66,11 @@
       </section>
       <section id="projects">
         <h2 id="about1">PROJECTS</h2> 
-        <h2 class="project-tile">These are some of my projects</h2>
+        <h2 id="about2">These are some of my projects</h2>
         <p>ADD PROJECTS</p>
       </section>
       <section id="contact">
         <h2 id="about1">CONTACT</h2> 
-        <h1>Let's work together...</h1>
         <h2 id="about2">Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</h2>
       </section>
       <section class="footer">
