--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3">Here I am!</h2>
-            <h2 id="about4">I'm a <strong>Frontend Web Developer</strong> building the Front-end of Websites and Web Applications that leads to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
+            <h2 id="about4">I'm a <strong>Frontend Web Developer</strong> building the Front-end of Websites and Web Applications that lead to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
             <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>Web Development</strong> so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming</h2>
             <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="contact-button" href="./#contact">Contact</a>
@@ -67,17 +67,62 @@
       <section id="projects">
         <h2 id="about1">PROJECTS</h2> 
         <h2 id="about2">These are some of my projects</h2>
-        <p>ADD PROJECTS</p>
+        <div class="project-section">
+          <div class="project-left-container">
+            <div class="project1-left">
+              <p>project 1 pic</p>
+            </div>
+            <div class="project2-left">
+              <p>project 2 pic</p>
+            </div>
+            <div class="project3-left">
+              <p>project 3 pic</p>
+            </div>
+            <div class="project4-left">
+              <p>project 4 pic</p>
+            </div>
+            <div class="project5-left">
+              <p>project 5 pic</p>
+            </div>
+          </div>
+          <div class="project-right-container">
+            <div class="project1-right">
+              <h2>Project 1</h2>
+              <h2>Project description</h2>
+              <p>project link</p>
+            </div>
+            <div class="project2-right">
+              <h2>Project 2</h2>
+              <h2>Project description</h2>
+              <p>project link</p>
+            </div>
+            <div class="project3-right">
+              <h2>Project 3</h2>
+              <h2>Project description</h2>
+              <p>project link</p>
+            </div>
+            <div class="project4-right">
+              <h2>Project 4</h2>
+              <h2>Project description</h2>
+              <p>project link</p>
+            </div>
+            <div class="project5-right">
+              <h2>Project 5</h2>
+              <h2>Project description</h2>
+              <p>project link</p>
+            </div>
+          </div>
+        </div>
       </section>
       <section id="contact">
         <h2 id="about1">CONTACT</h2> 
-        <h2 id="about2">Feel free to Contact me by submitting the form below and I will get back to you as soon as possible</h2>
+        <h2 id="about2">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
       </section>
       <section class="footer">
         <div class="above-bar-footer">
           <div class="footdiv">
               <h2>Connor Hill</h2>
-              <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product</h3>
+              <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that lead to the success of the overall product</h3>
           </div>
           <h2 class="socials">Socials</h2>
           <div class="social-icons">
