--- a/index.html
+++ b/index.html
@@ -68,43 +68,49 @@
         <h2 id="about1">PROJECTS</h2> 
         <h2 id="about2">These are some of my projects</h2>
         <div class="project-section">
-          <div class="project-left-container">
+          <div class="project-1-container">
             <div class="project1-left">
               <p>project 1 pic</p>
             </div>
-            <div class="project2-left">
-              <p>project 2 pic</p>
-            </div>
-            <div class="project3-left">
-              <p>project 3 pic</p>
-            </div>
-            <div class="project4-left">
-              <p>project 4 pic</p>
-            </div>
-            <div class="project5-left">
-              <p>project 5 pic</p>
-            </div>
-          </div>
-          <div class="project-right-container">
             <div class="project1-right">
               <h2>Project 1</h2>
               <h2>Project description</h2>
               <p>project link</p>
+            </div>
+          </div>
+          <div class="project-2-container">
+            <div class="project2-left">
+              <p>project 2 pic</p>
             </div>
             <div class="project2-right">
               <h2>Project 2</h2>
               <h2>Project description</h2>
               <p>project link</p>
             </div>
+          </div>
+          <div class="project-3-container">
+            <div class="project3-left">
+              <p>project 3 pic</p>
+            </div>
             <div class="project3-right">
               <h2>Project 3</h2>
               <h2>Project description</h2>
               <p>project link</p>
             </div>
+          </div>
+          <div class="project-4-container">
+            <div class="project4-left">
+              <p>project 4 pic</p>
+            </div>
             <div class="project4-right">
               <h2>Project 4</h2>
               <h2>Project description</h2>
               <p>project link</p>
+            </div>
+          </div>
+          <div class="project-5-container">
+            <div class="project5-left">
+              <p>project 5 pic</p>
             </div>
             <div class="project5-right">
               <h2>Project 5</h2>
