--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
             <div class="project1-right">
               <h2>Project 1</h2>
               <h2>Project description</h2>
-              <p>project link</p>
+              <a id="project-1-link" href="https://twitter.com/freecodecamp/">
+                <i class="fab fa-twitter"></i>
             </div>
           </div>
           <div class="project-2-container">
@@ -85,7 +86,8 @@
             <div class="project2-right">
               <h2>Project 2</h2>
               <h2>Project description</h2>
-              <p>project link</p>
+              <a id="project-2-link" href="https://twitter.com/freecodecamp/">
+                <i class="fab fa-twitter"></i>
             </div>
           </div>
           <div class="project-3-container">
@@ -95,7 +97,8 @@
             <div class="project3-right">
               <h2>Project 3</h2>
               <h2>Project description</h2>
-              <p>project link</p>
+              <a id="project-3-link" href="https://twitter.com/freecodecamp/">
+                <i class="fab fa-twitter"></i>
             </div>
           </div>
           <div class="project-4-container">
@@ -105,7 +108,8 @@
             <div class="project4-right">
               <h2>Project 4</h2>
               <h2>Project description</h2>
-              <p>project link</p>
+              <a id="project-4-link" href="https://twitter.com/freecodecamp/">
+                <i class="fab fa-twitter"></i>
             </div>
           </div>
           <div class="project-5-container">
@@ -115,7 +119,8 @@
             <div class="project5-right">
               <h2>Project 5</h2>
               <h2>Project description</h2>
-              <p>project link</p>
+              <a id="project-5-link" href="https://twitter.com/freecodecamp/">
+                <i class="fab fa-twitter"></i>
             </div>
           </div>
         </div>
