--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
             <div class="project1-right">
               <h2>Project 1</h2>
               <h2>Project description</h2>
-              <a id="project-1-link" href="https://twitter.com/freecodecamp/">
-                <i class="fab fa-twitter"></i>
+              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
           <div class="project-2-container">
@@ -86,8 +85,7 @@
             <div class="project2-right">
               <h2>Project 2</h2>
               <h2>Project description</h2>
-              <a id="project-2-link" href="https://twitter.com/freecodecamp/">
-                <i class="fab fa-twitter"></i>
+              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
           <div class="project-3-container">
@@ -97,8 +95,7 @@
             <div class="project3-right">
               <h2>Project 3</h2>
               <h2>Project description</h2>
-              <a id="project-3-link" href="https://twitter.com/freecodecamp/">
-                <i class="fab fa-twitter"></i>
+              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
           <div class="project-4-container">
@@ -108,8 +105,7 @@
             <div class="project4-right">
               <h2>Project 4</h2>
               <h2>Project description</h2>
-              <a id="project-4-link" href="https://twitter.com/freecodecamp/">
-                <i class="fab fa-twitter"></i>
+              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
           <div class="project-5-container">
@@ -119,8 +115,7 @@
             <div class="project5-right">
               <h2>Project 5</h2>
               <h2>Project description</h2>
-              <a id="project-5-link" href="https://twitter.com/freecodecamp/">
-                <i class="fab fa-twitter"></i>
+              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
         </div>
