--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="project-section">
           <div class="project-1-container">
             <div class="project1-left">
-              <p>project 1 pic</p>
+              <p class="p1p">project 1 pic</p>
             </div>
             <div class="project1-right">
               <h2>Project 1</h2>
@@ -80,7 +80,7 @@
           </div>
           <div class="project-2-container">
             <div class="project2-left">
-              <p>project 2 pic</p>
+              <p class="p2p">project 2 pic</p>
             </div>
             <div class="project2-right">
               <h2>Project 2</h2>
@@ -90,7 +90,7 @@
           </div>
           <div class="project-3-container">
             <div class="project3-left">
-              <p>project 3 pic</p>
+              <p class="p3p">project 3 pic</p>
             </div>
             <div class="project3-right">
               <h2>Project 3</h2>
@@ -100,7 +100,7 @@
           </div>
           <div class="project-4-container">
             <div class="project4-left">
-              <p>project 4 pic</p>
+              <p class="p4p">project 4 pic</p>
             </div>
             <div class="project4-right">
               <h2>Project 4</h2>
@@ -110,7 +110,7 @@
           </div>
           <div class="project-5-container">
             <div class="project5-left">
-              <p>project 5 pic</p>
+              <p class="p5p">project 5 pic</p>
             </div>
             <div class="project5-right">
               <h2>Project 5</h2>
