--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
       <section id="contact">
         <h2 id="about1">CONTACT</h2> 
         <h2 id="about2">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
+        <form class="form" method="post" action="#">
+          <div class="name-entry">
+            <label class="name-label" for="name">Name</label>
+            <input required placeholder="Enter Your Name" type="text"  class="name-input" name="name" id="name"/>
+          </div>
+          <div class="email-entry">
+            <label class="email-label" for="email">Email</label>
+            <input required placeholder="Enter Your Email" type="text"  class="email-input" name="email" id="email"/>
+          </div>
+          <div class="message-entry">
+            <label class="message-label" for="message">Message</label>
+            <input required placeholder="Enter Your Message" type="text"  class="message-input" name="message" id="message"/>
+          </div>
+          <button type="submit" class="contact-button">SUBMIT</button>
+        </form>
       </section>
       <section class="footer">
         <div class="above-bar-footer">
