--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <header class="head">
           <nav id="navbar">
             <ul>
+          <li><a href="https://starlit-moxie-647b5a.netlify.app/">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
