--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <main>
-      <section>
+      <div>
         <header class="head">
           <nav id="navbar">
             <ul>
@@ -27,7 +27,7 @@
         </ul>
           </nav>
         </header>
-      </section>
+      </div>
       <section id="welcome-section" class="Welcome">
         <h1 id="welc-about1">Hey, I am Connor!</h1>
         <h2 id="welc-about">a web developer</h2>   
@@ -140,7 +140,7 @@
           <button type="submit" class="contact-button">SUBMIT</button>
         </form>
       </section>
-      <section class="footer">
+      <div class="footer">
         <div class="above-bar-footer">
           <div class="footdiv">
               <h2>Connor Hill</h2>
@@ -167,7 +167,7 @@
         </div>
         <div class="bar"></div>
         <div class="copyright">© Copyright 2023. Made by Connor Hill</div>
-      </section>
+      </div>
     </main>
   </body>
 </html>
