--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </header>
       </div>
       <section id="welcome-section" class="Welcome">
-        <h1 id="welc-about1">Hey, I am Connor!</h1>
-        <h2 id="welc-about">a web developer</h2>   
+        <h1 id="welc-about1">Hey, I am Connor Hill!</h1>
+        <h2 id="welc-about">A front end focused Web Developer building the front end of websites and web applications that lead to the success of the overall product</h2>   
       </section>
       <section id="about-me" class="About-mee">
         <h2 id="about1">ABOUT ME</h2> 
@@ -38,9 +38,9 @@
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3">Here I am!</h2>
-            <h2 id="about4">I'm a <strong>Frontend Web Developer</strong> building the Front-end of Websites and Web Applications that lead to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
-            <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>Web Development</strong> so it can help other people of the Dev Community. Feel free to Connect or Follow me on my Linkedin where I post useful content related to Web Development and Programming</h2>
-            <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience then don't hesitate to <strong>contact</strong> me.</h2>   
+            <h2 id="about4">I'm a <strong>front end web developer</strong> building the front end of websites and web applications that lead to the success of the overall product. Check out some of my work in the <strong>Projects</strong> section.</h2>
+            <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to web development and programming</h2>
+            <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="contact-button" href="./#contact">Contact</a>
           </div>
           <div>
