--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section id="welcome-section" class="Welcome">
         <h1 id="welc-about1">Hey, I am Connor Hill!</h1>
         <h2 id="welc-about">A front end focused Web Developer building the front end of websites and web applications that lead to the success of the overall product</h2>   
-        <a class="contact-button" href="./#projects">Projects</a>
+        <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
       <section id="about-me" class="About-mee">
         <h2 id="about1">ABOUT ME</h2> 
