--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Magazine</title>
+    <title>WEBSITE_YO</title>
     <link
       href="https://fonts.googleapis.com/css?family=Anton%7CBaskervville%7CRaleway&display=swap"
       rel="stylesheet"
@@ -167,7 +167,7 @@
           </div>
         </div>
         <div class="bar"></div>
-        <div class="copyright">© Copyright 2023. Made by Connor Hill</div>
+        <div class="copyright">© Copyright 2023. Made by <a href="https://starlit-moxie-647b5a.netlify.app/">Connor Hill</a></div>
       </div>
     </main>
   </body>
