--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2 id="welc-about">A front end focused Web Developer building the front end of websites and web applications that lead to the success of the overall product</h2>   
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
-      <section id="about-me" class="About-mee">
+      <section id="about" class="About-mee">
         <h2 id="about1">ABOUT ME</h2> 
         <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
         <div class="about-section">
