--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
               <p class="p1p">project 1 pic</p>
             </div>
             <div class="project1-right">
-              <h2>Project 1</h2>
-              <h2>Project description</h2>
+              <h2 id="about3">Project 1</h2>
+              <h2 id="about2">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
@@ -85,8 +85,8 @@
               <p class="p2p">project 2 pic</p>
             </div>
             <div class="project2-right">
-              <h2>Project 2</h2>
-              <h2>Project description</h2>
+              <h2 id="about3">Project 2</h2>
+              <h2 id="about2">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
@@ -95,8 +95,8 @@
               <p class="p3p">project 3 pic</p>
             </div>
             <div class="project3-right">
-              <h2>Project 3</h2>
-              <h2>Project description</h2>
+              <h2 id="about3">Project 3</h2>
+              <h2 id="about2">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
@@ -105,8 +105,8 @@
               <p class="p4p">project 4 pic</p>
             </div>
             <div class="project4-right">
-              <h2>Project 4</h2>
-              <h2>Project description</h2>
+              <h2 id="about3">Project 4</h2>
+              <h2 id="about2">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
@@ -115,8 +115,8 @@
               <p class="p5p">project 5 pic</p>
             </div>
             <div class="project5-right">
-              <h2>Project 5</h2>
-              <h2>Project description</h2>
+              <h2 id="about3">Project 5</h2>
+              <h2 id="about2">Project description</h2>
               <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
             </div>
           </div>
