--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
       <section id="about" class="About-mee">
-        <h2 id="about1">ABOUT ME</h2> 
+        <h2 id="about1">ABOUT ME</h2>
+        <div class="barz"></div>
         <h2 id="about2">Here's a little more information about me, what I do, and my current skills regarding programming and technology</h2> 
         <div class="about-section">
           <div class="abouts">
@@ -123,7 +124,7 @@
         </div>
       </section>
       <section id="contact">
-        <h2 id="about1">CONTACT</h2> 
+        <h2 id="about1">CONTACT ME</h2> 
         <h2 id="about2">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
         <form class="form" method="post" action="#">
           <div class="name-entry">
