--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
         </div>
       </section>
       <section id="projects">
-        <h2 id="about1">PROJECTS</h2> 
+        <h2 id="about1">PROJECTS</h2>
+        <div class="barz"></div>
         <h2 id="about2">These are some of my projects</h2>
         <div class="project-section">
           <div class="project-1-container">
@@ -124,7 +125,8 @@
         </div>
       </section>
       <section id="contact">
-        <h2 id="about1">CONTACT ME</h2> 
+        <h2 id="about1">CONTACT ME</h2>
+        <div class="barz"></div>
         <h2 id="about2">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
         <form class="form" method="post" action="#">
           <div class="name-entry">
