--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
         </div>
       </section>
-      <section id="contact">
+      <section id="contact" class="contact">
         <h2 id="about1">CONTACT ME</h2>
         <div class="barz"></div>
         <h2 id="about2">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
