--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <section id="contact" class="contact">
         <h2 id="about1">CONTACT ME</h2>
         <div class="barz"></div>
-        <h2 id="about2">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
+        <h2 id="about2" class="contact-paragraph">Feel free to Contact me by submitting the form below, and I will get back to you as soon as possible</h2>
         <form class="form" method="post" action="#">
           <div class="name-entry">
             <label class="name-label" for="name">Name</label>
