--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </div>
           <div class="message-entry">
             <label class="message-label" for="message">Message</label>
-            <input required placeholder="Enter Your Message" type="text"  class="message-input" name="message" id="message"/>
+            <input required cols="30" rows="10" placeholder="Enter Your Message" type="text"  class="message-input" name="message" id="message"/>
           </div>
           <button type="submit" class="contact-button">SUBMIT</button>
         </form>
