--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <label class="message-label" for="message">Message</label>
             <input required cols="30" rows="10" placeholder="Enter Your Message" type="text"  class="message-input" name="message" id="message"/>
           </div>
-          <button type="submit" class="contact-button">SUBMIT</button>
+          <button type="submit" class="submit-button">SUBMIT</button>
         </form>
       </section>
       <div class="footer">
