--- a/index.html
+++ b/index.html
@@ -146,27 +146,29 @@
       </section>
       <div class="footer">
         <div class="above-bar-footer">
-          <div class="footdiv">
-              <h2>Connor Hill</h2>
-              <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that lead to the success of the overall product</h3>
+          <div class="footdiv-left">
+            <h2>Connor Hill</h2>
+            <h3>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that lead to the success of the overall product</h3>
           </div>
-          <h2 class="socials">Socials</h2>
-          <div class="social-icons">
-            <a id="profile-link" target="_blank" href="https://www.facebook.com/freecodecamp/">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a id="profile-link" href="https://twitter.com/freecodecamp/">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a id="profile-link" href="https://instagram.com/freecodecamp">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a id="profile-link" href="https://www.linkedin.com/school/free-code-camp/">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a id="profile-link" href="https://www.youtube.com/freecodecamp">
-              <i class="fab fa-youtube"></i>
-            </a>
+          <div class="footdiv-right">
+            <h2 class="socials">Socials</h2>
+            <div class="social-icons">
+              <a id="profile-link" target="_blank" href="https://www.facebook.com/freecodecamp/">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a id="profile-link" href="https://twitter.com/freecodecamp/">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a id="profile-link" href="https://instagram.com/freecodecamp">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a id="profile-link" href="https://www.linkedin.com/school/free-code-camp/">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a id="profile-link" href="https://www.youtube.com/freecodecamp">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
           </div>
         </div>
         <div class="bar"></div>
