--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="above-bar-footer">
           <div class="footdiv-left">
             <h2 class="footer-name" id="about10">Connor Hill</h2>
-            <h3 class="footer-description" id="about11">A Frontend focused Web Developer building the Frontend of Websites and Web Applications that lead to the success of the overall product</h3>
+            <h3 class="footer-description" id="about11">A front end focused web developer building the front end of websites and web applications that lead to the success of the overall product</h3>
           </div>
           <div class="footdiv-right">
             <h2 class="socials">Socials</h2>
