--- a/index.html
+++ b/index.html
@@ -154,19 +154,19 @@
             <h2 class="socials">Socials</h2>
             <div class="social-icons">
               <a id="profile-link" target="_blank" href="https://www.facebook.com/freecodecamp/">
-                <i class="fab fa-facebook-f"></i>
+                <i class="ss fab fa-facebook-f"></i>
               </a>
               <a id="profile-link" href="https://twitter.com/freecodecamp/">
-                <i class="fab fa-twitter"></i>
+                <i class="ss fab fa-twitter"></i>
               </a>
               <a id="profile-link" href="https://instagram.com/freecodecamp">
-                <i class="fab fa-instagram"></i>
+                <i class="ss fab fa-instagram"></i>
               </a>
               <a id="profile-link" href="https://www.linkedin.com/school/free-code-camp/">
-                <i class="fab fa-linkedin-in"></i>
+                <i class="ss fab fa-linkedin-in"></i>
               </a>
               <a id="profile-link" href="https://www.youtube.com/freecodecamp">
-                <i class="fab fa-youtube"></i>
+                <i class="ss fab fa-youtube"></i>
               </a>
             </div>
           </div>
