--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <section id="welcome-section" class="Welcome">
         <h1 id="welc-about1">Hey, I'm Connor Hill</h1>
-        <h2 id="welc-about">A front end focused Web Developer building the front end of websites and web applications that lead to the success of the overall product</h2>   
+        <h2 id="welc-about">A front end focused web developer building the front end of websites and web applications that lead to the success of the overall product</h2>   
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
       <section id="about" class="About-mee">
