--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2 id="about3">Here I am!</h2>
             <h2 id="about4">I'm a <strong>front end web developer</strong> building the front end of websites and web applications that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
             <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to web development and programming.</h2>
-            <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
+            <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contact">Contact</a>
           </div>
           <div>
