--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="project1-right">
               <h2 id="about3">Project 1</h2>
               <h2 id="about2">Project description</h2>
-              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/">Live Link</a>
             </div>
           </div>
           <div class="project-2-container">
