--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             </div>
             <div class="project1-right">
               <h2 id="about3">Project 1</h2>
-              <h2 id="about2">Project description</h2>
-              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/">Live Link</a>
+              <h2 id="about2">A simple, classic game</h2>
+              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
           </div>
           <div class="project-2-container">
@@ -88,8 +88,8 @@
             </div>
             <div class="project2-right">
               <h2 id="about3">Project 2</h2>
-              <h2 id="about2">Project description</h2>
-              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Live Link</a>
+              <h2 id="about2">A nice looking Space X Clone</h2>
+              <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Live Link</a>
             </div>
           </div>
           <div class="project-3-container">
