--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="project-section">
           <div class="project-1-container">
             <div class="project1-left">
-              <p class="p1p">project 1 pic</p>
+              <p class="p1p"></p>
             </div>
             <div class="project1-right">
               <h2 id="about3">Project 1</h2>
@@ -84,7 +84,7 @@
           </div>
           <div class="project-2-container">
             <div class="project2-left">
-              <p class="p2p">project 2 pic</p>
+              <p class="p2p"></p>
             </div>
             <div class="project2-right">
               <h2 id="about3">Project 2</h2>
