Changed welcome and aboutme

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <section id="welcome-section" class="Welcome">
         <h1 id="welc-about1">Hey, I'm Connor Hill</h1>
-        <h2 id="welc-about">A front end focused web developer building the front end of websites and web applications that lead to the success of the overall product</h2>   
+        <h2 id="welc-about">An iOS and front end focused web developer building the front end of websites and web applications that lead to the success of the overall product</h2>   
         <a id="welcome-button" class="contact-button" href="./#projects">Projects</a>
       </section>
       <section id="about" class="About-mee">
@@ -40,7 +40,7 @@
         <div class="about-section">
           <div class="abouts">
             <h2 id="about3">Here I am!</h2>
-            <h2 id="about4">I'm a <strong>front end web developer</strong> building the front end of websites and web applications that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
+            <h2 id="about4">I'm a <strong>front end web and iOS developer</strong> building the front end of websites and apps that lead to the success of the overall product. Check out some of my work in the <strong>projects</strong> section.</h2>
             <h2 id="about5">I also like sharing content related to the stuff that I have learned over the years in <strong>web development</strong> so it can help other people of the dev community. Feel free to connect or follow me on my LinkedIn where I post useful content related to web development and programming.</h2>
             <h2 id="about6">I'm open to <strong>job</strong> opportunities where I can contribute, learn, and grow. If you have a good opportunity that matches my skills and experience, then don't hesitate to <strong>contact</strong> me.</h2>   
             <a class="about-button" href="./#contact">Contact</a>
@@ -58,10 +58,10 @@
               <div class="skills_skill">Github</div>
               <div class="skills_skill">Responsive Design</div>
               <div class="skills_skill">Terminal</div>
-              <div class="skills_skill">SQL Basics</div>
+              <div class="skills_skill">SQL basics</div>
               <div class="skills_skill">Problem Solving</div>
-              <div class="skills_skill">Efficenicy</div>
-              <div class="skills_skill">Curiosity</div>
+              <div class="skills_skill">Java</div>
+              <div class="skills_skill">Swift</div>
             </div>
             </div>
           </div>
