project section update

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
           </div>
           <div class="project-2-container">
             <div class="project2-left">
-              <p class="p2p"></p>
+              <p class="p2p">project 2 pic</p>
             </div>
             <div class="project2-right">
               <h2 id="about3">Project 2</h2>
-              <h2 id="about2">A nice looking Space X Clone</h2>
+              <h2 id="about2"></h2>
               <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Live Link</a>
             </div>
           </div>
