socials links changed

--- a/index.html
+++ b/index.html
@@ -153,16 +153,16 @@
           <div class="footdiv-right">
             <h2 class="socials">Socials</h2>
             <div class="social-icons">
-              <a id="profile-link" target="_blank" href="https://www.facebook.com/freecodecamp/">
+              <a id="profile-link" target="_blank" href="https://www.facebook.com/connor.hill.96155/">
                 <i class="ss fab fa-facebook-f"></i>
               </a>
-              <a id="profile-link" href="https://twitter.com/freecodecamp/">
-                <i class="ss fab fa-twitter"></i>
+              <a id="profile-link" href="https://github.com/MeruemMoniker">
+                <i class="ss fab fa-github"></i>
               </a>
-              <a id="profile-link" href="https://instagram.com/freecodecamp">
+              <a id="profile-link" href="https://www.instagram.com/connorjhill1/">
                 <i class="ss fab fa-instagram"></i>
               </a>
-              <a id="profile-link" href="https://www.linkedin.com/school/free-code-camp/">
+              <a id="profile-link" href="https://www.linkedin.com/in/connor-j-hill/">
                 <i class="ss fab fa-linkedin-in"></i>
               </a>
               <a id="profile-link" href="https://www.youtube.com/freecodecamp">
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div class="bar"></div>
-        <div class="copyright">© Copyright 2024. Made by <a href="https://starlit-moxie-647b5a.netlify.app/">Connor Hill</a></div>
+        <div class="copyright">© Copyright 2024. Made by <a href="https://connorjhill.netlify.app/">Connor Hill</a></div>
       </div>
     </main>
   </body>
