--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </div>
           <div class="message-entry">
             <label class="message-label" for="message">LinkedIn:</label>
-            <a href="https://www.linkedin.com/in/connor-j-hill/" id="about2" class="contact-paragraph"><strong>Message Me!</strong></a>
+            <a id="about2" class="contact-paragraph" href="https://www.linkedin.com/in/connor-j-hill/" id="about2" class="contact-paragraph"><strong>Message Me!</strong></a>
           </div>
           <!-- <button type="submit" class="submit-button">SUBMIT</button>
         </form>  -->
