same but correct

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             <h2 id="about2" class="contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
           </div>
           <div class="message-entry">
-            <label class="message-label center" for="message">LinkedIn:</label>
-            <a id="about2" class="contact-paragraph" href="https://www.linkedin.com/in/connor-j-hill/" id="about2" class="contact-paragraph"><strong>Message Me!</strong></a>
+            <label class="message-label" for="message">LinkedIn:</label>
+            <a id="about2" class="contact-paragraph center" href="https://www.linkedin.com/in/connor-j-hill/" id="about2" class="contact-paragraph"><strong>Message Me!</strong></a>
           </div>
           <!-- <button type="submit" class="submit-button">SUBMIT</button>
         </form>  -->
