--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="project-section">
           <div class="project-1-container">
             <div class="project1-left">
-              <p class="p1p"></p>
+              <p class="p1p">project 1 pic</p>
             </div>
             <div class="project1-right">
               <h2 id="about3">Project 1</h2>
