--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="project1-right">
               <h2 id="about3">Project 1</h2>
               <h2 id="about2">Project description</h2>
-              <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Live Link</a>
+              <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
             </div>
           </div>
           <div class="project-2-container">
@@ -108,8 +108,8 @@
             </div>
             <div class="project4-right">
               <h2 id="about3">RPS</h2>
-              <h2 id="about2">A simple, classic gamen</h2>
-              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Learn More</a>
+              <h2 id="about2">A simple, classic game.</h2>
+              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
           </div>
           <div class="project-5-container">
