--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <label class="email-label center" for="email">Phone Number:</label>
             <h2 id="about2" class="contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
           </div>
-          <div class="message-entry">
+          <div class="message-entry center">
             <label class="message-label center" for="message">LinkedIn:</label>
             <a id="about2" class="contact-paragraph center" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
           </div>
