--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </div>
           <div class="message-entry center">
             <label class="message-label center" for="message">LinkedIn:</label>
-            <a id="about2" class="contact-paragraph center" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
+            <a id="about2" class="contact-paragraph center contactLink" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
           </div>
           <!-- <button type="submit" class="submit-button">SUBMIT</button>
         </form>  -->
