new project added

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
               <p class="p3p">project 3 pic</p>
             </div>
             <div class="project3-right">
-              <h2 id="about3">Project 3</h2>
-              <h2 id="about2">Project description</h2>
+              <h2 id="about3">GalaxyGuide</h2>
+              <h2 id="about2">SwiftUI project in which you explore Apollo mission details and crew bios.</h2>
               <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Learn More</a>
             </div>
           </div>
