adding another project

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             <div class="project3-left">
               <p class="p3p">project 3 pic</p>
             </div>
+            <!-- any apollo mission emblem as pic -->
             <div class="project3-right">
               <h2 id="about3">GalaxyGuide</h2>
               <h2 id="about2">SwiftUI project in which you explore Apollo mission details and crew bios.</h2>
@@ -116,9 +117,10 @@
             <div class="project5-left">
               <p class="p5p">project 5 pic</p>
             </div>
+            <!-- american flag picture -->
             <div class="project5-right">
-              <h2 id="about3">Project 5</h2>
-              <h2 id="about2">Project description</h2>
+              <h2 id="about3">GuessTheFlag</h2>
+              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
               <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Learn More</a>
             </div>
           </div>
