added another project

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
               <p class="p2p">project 2 pic</p>
             </div>
             <div class="project2-right">
-              <h2 id="about3">Project 2</h2>
-              <h2 id="about2"></h2>
+              <h2 id="about3">SnowSeeker</h2>
+              <h2 id="about2">A SwiftUI project with detailed global ski resort information at your fingertips.</h2>
               <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
             </div>
           </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="project4-right">
               <h2 id="about3">RPS</h2>
-              <h2 id="about2">A simple, classic game.</h2>
+              <h2 id="about2">A web application of a simple, classic game.</h2>
               <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
           </div>
