snowseeker link added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="project2-right">
               <h2 id="about3">SnowSeeker</h2>
               <h2 id="about2">A SwiftUI project with detailed global ski resort information at your fingertips.</h2>
-              <a class="contact-button" id="project-1-link" href="https://roaring-lebkuchen-3eae39.netlify.app/">Learn More</a>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#SnowSeeker">Learn More</a>
             </div>
           </div>
           <div class="project-3-container">
