--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               <a id="profile-link" href="https://www.linkedin.com/in/connor-j-hill/">
                 <i class="ss fab fa-linkedin-in fa-2x"></i>
               </a>
-              <a id="profile-link" href="https://www.youtube.com/freecodecamp">
+              <a id="profile-link" href="https://www.youtube.com/watch?v=6dNho0h_yQQ">
                 <i class="ss fab fa-youtube fa-2x"></i>
               </a>
             </div>
