--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="project3-right">
               <h2 id="about3">GalaxyGuide</h2>
               <h2 id="about2">SwiftUI project in which you explore Apollo mission details and crew bios.</h2>
-              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Learn More</a>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GalaxyGuide">Learn More</a>
             </div>
           </div>
           <div class="project-4-container">
@@ -111,7 +111,7 @@
             <div class="project4-right">
               <h2 id="about3">GuessTheFlag</h2>
               <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
-              <a class="contact-button" id="project-1-link" href="https://twitter.com/freecodecamp/">Learn More</a>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Learn More</a>
             </div>
           </div>
           <div class="project-5-container">
