--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div> -->
           <div class="project-2-container">
             <div class="project2-left">
-              <p class="p2p">project 2 pic</p>
+              <p class="p2p">project 1 pic</p>
             </div>
             <div class="project2-right">
               <h2 id="about3">SnowSeeker</h2>
@@ -94,7 +94,7 @@
           </div>
           <div class="project-3-container">
             <div class="project3-left">
-              <p class="p3p">project 3 pic</p>
+              <p class="p3p">project 2 pic</p>
             </div>
             <!-- any apollo mission emblem as pic -->
             <div class="project3-right">
@@ -105,23 +105,23 @@
           </div>
           <div class="project-4-container">
             <div class="project4-left">
-              <p class="p4p">project 4 pic</p>
+              <p class="p4p"></p>
             </div>
             <!-- american flag picture -->
             <div class="project4-right">
-              <h2 id="about3">GuessTheFlag</h2>
-              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
-              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Learn More</a>
+              <h2 id="about3">RPS</h2>
+              <h2 id="about2">A web application of a simple, classic game.</h2>
+              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Learn More</a>
             </div>
           </div>
           <div class="project-5-container">
             <div class="project5-left">
-              <p class="p5p"></p>
+              <p class="p5p">project 4 pic</p>
             </div>
             <div class="project5-right">
-              <h2 id="about3">RPS</h2>
-              <h2 id="about2">A web application of a simple, classic game.</h2>
-              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
+              <h2 id="about3">GuessTheFlag</h2>
+              <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Live Link</a>
             </div>
           </div>
         </div>
