--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="project4-right">
               <h2 id="about3">RPS</h2>
               <h2 id="about2">A web application of a simple, classic game.</h2>
-              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Learn More</a>
+              <a class="contact-button" id="project-1-link" href="https://connorhill-rockpaperscissors.netlify.app/">Live Link</a>
             </div>
           </div>
           <div class="project-5-container">
@@ -121,7 +121,7 @@
             <div class="project5-right">
               <h2 id="about3">GuessTheFlag</h2>
               <h2 id="about2">A SwiftUI project in which you match flags to country names in a fun quiz format.</h2>
-              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Live Link</a>
+              <a class="contact-button" id="project-1-link" href="https://meruemmoon.netlify.app/#GuessTheFlag">Learn More</a>
             </div>
           </div>
         </div>
