correected font of contact section

--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
         <h2 id="about2" class="contact-paragraph">Feel free to contact me below, and I will get back to you as soon as possible.</h2>
         <!-- <form class="form" method="post" action="#"> -->
           <div class="name-entry">
-            <label class="name-label center" for="name">Email:</label>
+            <label class="name-label center correctFont" for="name">Email:</label>
             <h2 id="about2" class="contact-paragraph"><strong>Jamesconnorhill@gmail.com</strong></h2>
           </div>
           <div class="email-entry">
-            <label class="email-label center" for="email">Phone Number:</label>
+            <label class="email-label center correctFont" for="email">Phone Number:</label>
             <h2 id="about2" class="contact-paragraph"><strong>+1 (812) 603-9832</strong></h2>
           </div>
           <div class="message-entry center">
-            <label class="message-label center" for="message">LinkedIn:</label>
+            <label class="message-label center correctFont" for="message">LinkedIn:</label>
             <a id="about2" class="contact-paragraph center contactLink" href="https://www.linkedin.com/in/connor-j-hill/"><strong>Message Me!</strong></a>
           </div>
           <!-- <button type="submit" class="submit-button">SUBMIT</button>
