--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
               <div class="skills_skill">SwiftUI</div>
               <div class="skills_skill">UIKit</div>
               <div class="skills_skill">SwiftData</div>
+              <div class="skills_skill">Unix</div>
               <div class="skills_skill">HTML</div>
               <div class="skills_skill">CSS</div>
               <div class="skills_skill">JavaScript</div>
               <div class="skills_skill">Github</div>
+              <div class="skills_skill">Linux</div>
               <div class="skills_skill">Responsive Design</div>
               <div class="skills_skill">API's</div>
+              <div class="skills_skill">Windows</div>
               <div class="skills_skill">SQL basics</div>
               <div class="skills_skill">Problem Solving</div>
               <div class="skills_skill">Java</div>
